Add collision detection, hose physics, and PL 511 fire truck system with realistic cooperative mechanics

--- a/public/index.html
+++ b/public/index.html
@@ -212,12 +212,18 @@
         </div>
 
         <div id="controls" style="display: none;">
-            <strong>Controls:</strong><br>
+            <strong>🎮 Controls:</strong><br>
             WASD - Move<br>
             Mouse - Aim water hose<br>
             Click - Spray water<br>
             Space - Rescue civilian<br>
-            R - Refill at hydrant
+            R - Refill at hydrant/truck<br>
+            <br><strong>🚒 Hose Management:</strong><br>
+            H - Connect/Disconnect hose<br>
+            E - Extend hose<br>
+            Q - Retract hose<br>
+            <br><em>Connect to PL 511 fire truck<br>
+            or hydrant for water supply!</em>
         </div>
 
         <div id="gameEndModal">
