--- a/public/index.html
+++ b/public/index.html
@@ -322,6 +322,71 @@
         #startGameBtn:hover:not(:disabled) {
             background: #66ff66;
         }
+
+        #shareLinkContainer {
+            margin-bottom: 20px;
+            padding: 15px;
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 8px;
+            border: 1px solid #666;
+        }
+
+        #shareLinkBox {
+            display: flex;
+            gap: 10px;
+            margin: 10px 0;
+        }
+
+        #shareLink {
+            flex: 1;
+            padding: 8px 12px;
+            background: #222;
+            color: #ccc;
+            border: 1px solid #555;
+            border-radius: 4px;
+            font-family: monospace;
+            font-size: 12px;
+        }
+
+        #copyLinkBtn {
+            padding: 8px 16px;
+            background: #4488ff;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 12px;
+            white-space: nowrap;
+        }
+
+        #copyLinkBtn:hover {
+            background: #6699ff;
+        }
+
+        #copyLinkBtn:active {
+            background: #2266dd;
+        }
+
+        #gameInfoBox {
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            margin-bottom: 5px;
+        }
+
+        #gameInfoBox input {
+            border-radius: 3px;
+            font-family: monospace;
+        }
+
+        #gameInfoBox button {
+            border-radius: 3px;
+            transition: background-color 0.2s;
+        }
+
+        #gameInfoBox button:hover {
+            background: #6699ff !important;
+        }
     </style>
 </head>
 <body>
@@ -352,7 +417,14 @@
         <div id="lobby" style="display: none;">
             <h1 class="logo">STATION 51 LOBBY</h1>
             <div id="lobbyInfo">
-                <p>Game ID: <span id="lobbyGameId">-</span></p>
+                <div id="shareLinkContainer">
+                    <p>Share this link to invite players:</p>
+                    <div id="shareLinkBox">
+                        <input type="text" id="shareLink" readonly>
+                        <button id="copyLinkBtn" onclick="copyShareLink()">📋 Copy</button>
+                    </div>
+                    <small id="copyStatus" style="color: #44ff44; display: none;">Link copied to clipboard!</small>
+                </div>
                 <p>Waiting for players to select roles and start mission...</p>
             </div>
             
@@ -401,7 +473,11 @@
 
         <div id="ui" style="display: none;">
             <div id="status">
-                <div>Game ID: <span id="currentGameId">-</span></div>
+                <div id="gameInfoBox">
+                    <span>Game: </span>
+                    <input type="text" id="currentGameLink" readonly style="width: 150px; font-size: 10px; background: #333; color: #ccc; border: 1px solid #555; padding: 2px 4px;">
+                    <button onclick="copyCurrentGameLink()" style="padding: 2px 6px; font-size: 10px; background: #4488ff; color: white; border: none; cursor: pointer;">📋</button>
+                </div>
                 <div>Players: <span id="playerCount">0</span>/4</div>
                 <div>Time: <span id="timeRemaining">5:00</span></div>
                 <div>Status: <span id="gameStatus">Waiting</span></div>
